--- a/package.json
+++ b/package.json
@@ -1,6 +1,23 @@
 {
-  "author": "mosop",
+  "name": "@typescript-plus/builtin-class-decorator",
+  "version": "0.1.0",
   "description": "A TypeScript class decorator for extending builtin ES5 classes.",
+  "license": "MIT",
+  "author": "mosop",
+  "files": [
+    "dist"
+  ],
+  "main": "dist/src/index.js",
+  "types": "dist/src/index.d.js",
+  "scripts": {
+    "dist": "npm-run-all dist:clean dist:build",
+    "dist:build": "tsc -p tsconfig.dist.json",
+    "dist:clean": "rm -rf dist",
+    "doc": "typedoc --mode file --excludeNotExported --out docs/api src",
+    "lint": "tslint -p . -t verbose",
+    "test": "ts-node node_modules/jasmine/bin/jasmine 'spec/**/*.spec.ts'",
+    "posttest": "npm run lint"
+  },
   "devDependencies": {
     "@types/jasmine": "^2.8.7",
     "@types/node": "^8.10.17",
@@ -11,19 +28,5 @@
     "tslint": "^5.10.0",
     "typedoc": "^0.11.1",
     "typescript": "^2.8.3"
-  },
-  "license": "MIT",
-  "main": "dist/src/index.js",
-  "name": "@typescript-plus/builtin-class-decorator",
-  "scripts": {
-    "dist": "npm-run-all dist:clean dist:build",
-    "dist:build": "tsc -p tsconfig.dist.json",
-    "dist:clean": "rm -rf dist",
-    "doc": "typedoc --mode file --excludeNotExported --out docs/api src",
-    "lint": "tslint -p . -t verbose",
-    "posttest": "npm run lint",
-    "test": "ts-node node_modules/jasmine/bin/jasmine 'spec/**/*.spec.ts'"
-  },
-  "types": "dist/src/index.d.js",
-  "version": "0.1.0"
+  }
 }
