--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,13 @@
 {
-  "extends": "./config/tsconfig.json",
+  "extends": "./node_modules/@myowncake/config-typescript/dist/tsconfig.es5.general.json",
   "compilerOptions": {
-    "rootDir": ".",
-    "outDir": "build"
+    "outDir": "build",
+    "rootDir": "."
   },
   "include": [
     "src/*.ts",
     "src/**/*.ts",
     "spec/*.ts",
     "spec/**/*.ts"
-  ],
-  "exclude": [
-    "node_modules"
   ]
 }
