--- a/tsconfig.spec.es2015.json
+++ b/tsconfig.spec.es2015.json
@@ -1,15 +1,12 @@
 {
-  "extends": "./config/tsconfig.json",
+  "extends": "./node_modules/@myowncake/config-typescript/dist/tsconfig.es5.general.json",
   "compilerOptions": {
-    "rootDir": ".",
     "outDir": "build",
+    "rootDir": ".",
     "target": "es2015"
   },
   "include": [
     "spec/*.ts",
     "spec/**/*.ts"
-  ],
-  "exclude": [
-    "node_modules"
   ]
 }
