tslint to eslint

--- a/package.json
+++ b/package.json
@@ -15,23 +15,26 @@
     "dist:build": "tsc -p tsconfig.dist.json",
     "dist:clean": "rm -rf dist",
     "doc": "typedoc --mode file --excludeNotExported --out docs/api src",
-    "lint": "tslint -p . -t verbose && tslint -p . -c node_modules/@myowncake/config-tslint/dist/tslint.no-unused-variable.json -t verbose",
+    "lint": "eslint \"{src,spec}/**/*.{ts,js}\"",
     "test": "npm-run-all test:*",
     "posttest": "npm run lint",
-    "test:es2015": "ts-node -P tsconfig.spec.es2015.json node_modules/jasmine/bin/jasmine 'spec/**/*.spec.ts'",
+    "test:es2015": "ts-node -P tsconfig.spec.es2020.json node_modules/jasmine/bin/jasmine 'spec/**/*.spec.ts'",
     "test:es5": "ts-node -P tsconfig.spec.es5.json node_modules/jasmine/bin/jasmine 'spec/**/*.spec.ts'"
   },
   "devDependencies": {
-    "@myowncake/config-tslint": "^0.1.0",
-    "@myowncake/config-typescript": "^0.1.0",
-    "@types/jasmine": "^2.8.7",
-    "@types/node": "^8.10.17",
-    "@types/tmp": "0.0.33",
-    "jasmine": "^2.99.0",
-    "npm-run-all": "^4.1.3",
-    "ts-node": "^6.0.5",
-    "tslint": "^5.10.0",
-    "typedoc": "^0.11.1",
-    "typescript": "^2.8.3"
+    "@myowncake/config": "^0.2.1",
+    "@types/jasmine": "^3.9.1",
+    "@types/node": "^14.17.20",
+    "@types/tmp": "^0.2.1",
+    "@typescript-eslint/eslint-plugin": "^4.32.0",
+    "@typescript-eslint/parser": "^4.32.0",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
+    "jasmine": "^3.9.0",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^2.4.1",
+    "ts-node": "^10.2.1",
+    "typedoc": "^0.22.4",
+    "typescript": "^4.4.3"
   }
 }
