--- a/tsconfig.spec.es5.json
+++ b/tsconfig.spec.es5.json
@@ -1,8 +1,11 @@
 {
-  "extends": "./node_modules/@myowncake/config-typescript/dist/tsconfig.es5.general.json",
+  "$schema": "https://schemastore.azurewebsites.net/schemas/json/tsconfig.json",
+  "extends": "./node_modules/@myowncake/config/dist/tsconfig.general.json",
   "compilerOptions": {
+    "rootDir": ".",
     "outDir": "build",
-    "rootDir": "."
+    "module": "CommonJS",
+    "target": "ES5"
   },
   "include": [
     "spec/*.ts",
