Added Es5BuiltinClass and Es6BuiltinClass decorators.  Removed BuiltinClass instead.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@typescript-plus/builtin-class-decorator",
-  "version": "0.3.1",
+  "version": "0.4.0",
   "description": "A TypeScript class decorator for extending builtin classes in ES5.",
   "repository": "typescript-plus/builtin-class-decorator",
   "license": "MIT",
@@ -11,15 +11,28 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "dist": "npm-run-all dist:clean dist:build",
-    "dist:build": "tsc -p tsconfig.dist.json",
+    "dist": "run-s dist:clean dist:build",
+    "dist:build": "run-p dist:build:*",
+    "dist:build:es5": "tsc -p tsconfig.dist.es5.json",
+    "dist:build:es6": "tsc -p tsconfig.dist.es6.json",
     "dist:clean": "rm -rf dist",
     "doc": "typedoc --mode file --excludeNotExported --out docs/api src",
     "lint": "eslint \"{src,spec}/**/*.{ts,js}\"",
-    "test": "npm-run-all test:*",
     "posttest": "npm run lint",
-    "test:es2015": "ts-node -P tsconfig.spec.es2020.json node_modules/jasmine/bin/jasmine 'spec/**/*.spec.ts'",
-    "test:es5": "ts-node -P tsconfig.spec.es5.json node_modules/jasmine/bin/jasmine 'spec/**/*.spec.ts'"
+    "test": "run-s test:compile test:run",
+    "test:compile": "run-p test:compile:*",
+    "test:compile:es5": "run-p test:compile:es5:*",
+    "test:compile:es6": "run-p test:compile:es6:*",
+    "test:compile:es5:es5": "tsc -p tsconfig.build.es5.json --outDir build/es5",
+    "test:compile:es5:es6": "tsc -p tsconfig.build.es5.json --outDir build/es6",
+    "test:compile:es5:spec": "tsc -p tsconfig.spec.es5.json",
+    "test:compile:es6:es5": "tsc -p tsconfig.build.es6.json --outDir build/es5",
+    "test:compile:es6:es6": "tsc -p tsconfig.build.es6.json --outDir build/es6",
+    "test:compile:es6:spec": "tsc -p tsconfig.spec.es6.json",
+    "test:run": "run-s test:run:*",
+    "test:run:es5": "jasmine 'build/es5/spec/**/*.spec.js'",
+    "test:run:es6": "jasmine 'build/es6/spec/**/*.spec.js'",
+    "testx": "npm run test:compile && jasmine"
   },
   "devDependencies": {
     "@myowncake/config": "^0.2.1",
