--- a/.eslintrc
+++ b/.eslintrc
@@ -2,6 +2,6 @@
   "root": true,
   "extends": "./node_modules/@myowncake/config/dist/.eslintrc.node14.json",
   "parserOptions": {
-    "project": ["./tsconfig.json", "./tsconfig.spec.es5.json", "./tsconfig.spec.es2020.json"]
+    "project": ["./tsconfig.json"]
   }
 }
